<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">English Tutor</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_dictionary">Dictionary</string>
    <string name="title_activity_vocabulary">Vocabulary</string>
    <string name="title_activity_grammar">Grammar</string>
    <string name="title_activity_edit_pack">Edit pack</string>
    <string name="title_activity_learn_word"></string>
    <string name="title_activity_dic_manager">Manager</string>

    <string name="theme_light">Custom.Light</string>
    <string name="theme_dark">Custom.Dark</string>

    <string name="pref_list_themes_title">Change theme</string>
    <string name="pref_list_themes_title_dialog">Choice theme</string>

    <string name="action_add_pack">Add pack</string>
    <string name="action_remove_pack">Remove pack</string>
    <string name="action_edit_pack">Edit pack</string>
    <string name="action_cloud_download">Download from cloud</string>
    <string name="action_folder_download">Download from folder</string>
    <string name="action_pronunciation">Pronunciation</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_rule">Rule</string>
    <string name="action_to_vocabulary">Add to vocab</string>

    <string name="vocab_act_pack_remove_confirm_question">Remove selected packs?</string>
    <string name="vocab_act_pack_remove_confirm_btn">REMOVE</string>
    <string name="vocab_act_pack_remove_cancel_btn">CANCEL</string>

    <string name="edit_pack_act_edit_title_dialog_title">Pack title</string>
    <string name="edit_pack_act_edit_title_dialog_subtext"></string>
    <string name="dialog_edit_card_front_side">Front side</string>
    <string name="dialog_edit_card_back_side">Back side</string>
    <string name="card_list_menu_edit">Edit</string>
    <string name="card_list_menu_delete">Remove card</string>

    <string name="ok">OK</string>
    <string name="dialog_edit_card_title">Pack title</string>

    <string name="hello_world">Hello world!</string>

    <string name="all_words_have_been_learned">You have learnt all words!</string>
    <string name="learn_word_act_top_end">I KNOW\n</string>
    <string name="learn_word_act_bottom_end">\nI FORGOT</string>
    <string name="title_activity_rule">Rule</string>
    <string name="title_activity_exerrcise">Exercise</string>
    <string name="internet_connection_is_not_available">Can\'t load topics</string>
    <string name="exercise_act_next_btn_text">NEXT</string>
    <string name="title_share">Share</string>
    <string name="title_feedback">Feedback</string>

    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer close</string>
    <string name="history_drawer_clear">Clear history</string>

    <string name="word_list_fragment_title">WORD</string>
    <string name="word_article_fragment_title">TRANSLATION</string>
    <string name="word_history_fragment_title">HISTORY</string>
    <string name="action_manager">Dict manager</string>
    <string name="word_list_fr_search_hint">Search word$#8230</string>

    <string name="sharing_massage">Try this awsome app https://play.google.com/store/apps/details?id=com.ujujzk.easyengmaterial.eeapp</string>

    <string name="feed_back_email">easy.english.assist@gmail.com</string>
    <string name="feed_back_subject">Feedback</string>
    <string name="feed_back_title">Send Feedback:</string>

    <string name="dict_manager_act_dictionary_remove_confirm_question">Remove dictionary</string>
    <string name="dict_manager_act_dictionary_remove_confirm_btn">REMOVE</string>
    <string name="dict_manager_act_dictionary_remove_cancel_btn">CANCEL</string>
    <string name="learn_word_act_left_end">I\nKNOW</string>

    <string name="no_internet_connection">No internet connection</string>
    <string name="finish_exercise">FINISH</string>
    <string name="exercise_title_start">Task</string>

    <string name="vocab_act_no_packs_txt">It\'s too desert here</string>
    <string name="vocab_act_no_packs_btn">Add pack</string>

    <string name="about_act_app_version_number">v. 1.0</string>
    <string name="about_act_author_name">Alexander Taran</string>
    <string name="no_connect_btn">Try again</string>
    <string name="no_word_to_pronounce">Enter word</string>


</resources>