<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.ujujzk.easyengmaterial.eeapp.vocabulary.VocabularyActivity">


    <item
            android:id="@+id/vocab_act_action_add_pack"
            android:title="@string/action_add_pack"
            android:icon="@drawable/ic_add_circle_white_48dp"
            android:orderInCategory="10"
            app:showAsAction="always"/>

    <item
            android:id="@+id/vocab_act_action_cloud_download"
            android:title="@string/action_cloud_download"
            android:icon="@drawable/ic_cloud_download_white_48dp"
            android:orderInCategory="30"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/vocab_act_action_folder_download"
            android:title="@string/action_folder_download"
            android:icon="@drawable/ic_folder_download_white_48dp"
            android:orderInCategory="35"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/vocab_act_action_remove_pack"
            android:title="@string/action_remove_pack"
            android:icon="@drawable/ic_delete_white_48dp"
            android:orderInCategory="40"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/vocab_act_action_edit_pack"
            android:title="@string/action_edit_pack"
            android:icon="@drawable/ic_edit_white_48dp"
            android:orderInCategory="50"
            app:showAsAction="ifRoom"/>


</menu>
